Removed arrow on mobile | created link for CTA to work section

--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,14 @@ img {
   text-align: center;
 }
 
+.check-out-link {
+  color: var(--black);
+}
+
+.check-out-link:hover {
+  color: var(--saddle-brown);
+}
+
 .languages-body {
   clear: both;
   display: flex;
@@ -190,6 +198,7 @@ img {
 #work-body {
   margin: 4em;
   text-align: center;
+  justify-content: center;
 }
 
 .page-footer {
@@ -314,6 +323,7 @@ button:focus,
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 1em;
   margin: auto;
+  text-align: center;
 }
 
 .grid__item {
@@ -554,30 +564,10 @@ Arrow styling end
     margin-right: 10px;
   }
   .arrow span {
-    display: block;
-    width: 10px;
-    height: 10px;
-    border-bottom: 5px solid var(--black);
-    border-right: 5px solid var(--black);
-    transform: rotate(45deg);
-    margin: -5px;
-    animation: animate 2s infinite;
+    display: none;
   }
   .arrow {
-    top: 95%;
-  }
-  @keyframes animate {
-    0% {
-      opacity: 0;
-      transform: rotate(45deg) translate(-10px, -10px);
-    }
-    50% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-      transform: rotate(45deg) translate(10px, 10px);
-    }
+    display: none;
   }
   .languages-body__item:first-child {
     font-size: var(--font-size-default);
